CCDB-93 Cleared up org.openepics.discs.conf.auditlog package